assets/css/style.scss
---
---

@import "jekyll-theme-cayman";

.btn {
  display: inline-block;
  margin-bottom: 1rem;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
  text-align: center;

  &:hover {
    text-decoration: none;
  }

  + .btn {
    margin-left: 1rem;
  }

  @include large {
    padding: 0.75rem 1rem;
  }

  @include medium {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }

  @include small {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;

    + .btn {
      margin-top: 1rem;
      margin-left: 0;
    }
  }
}

header .btn {
  color: rgba(255, 255, 255, 0.7);
  background-color: rgba(255, 255, 255, 0.08);
  border-color: rgba(255, 255, 255, 0.2);

  &:hover {
    color: rgba(255, 255, 255, 0.8);
    background-color: rgba(255, 255, 255, 0.2);
    border-color: rgba(255, 255, 255, 0.3);
  }
}

main .btn {
  color: $section-headings-color;
  background-color: white;
  border-color: $section-headings-color;

  &:hover {
    color: $section-headings-color;
    background-color: rgba(0, 0, 0, 0.08);
    border-color: $section-headings-color;
  }
}

// for items
.tag {
  font-size: 0.8rem;
  padding: 0.3rem;
}

#tagList .tag, .item .tag {
  margin: 5px;
}

.item {
  padding-top: .5rem;
  padding-bottom: .5rem;
  display: block;
}

#itemList div {
  border-top: 1px solid $border-color;
}

#itemList div:first-child {
  border-top: 0px;
}

#tagList .active {
  color: white;
  background-color: $section-headings-color;
  border-color: $section-headings-color;
}

#tagList .active:hover {
  color: white;
  background-color: $section-headings-color;
  border-color: $border-color;
}

// forms
textarea {
  width: 100%;
  display: inline-block;
  margin-bottom: 1rem;
  margin-top: 1rem;
  color: $body-text-color;
  border-color: $border-color;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;

  @include large {
    padding: 0.75rem 1rem;
  }

  @include medium {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }

  @include small {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;
  }
}

input {
  display: inline-block;
  margin-bottom: 1rem;
  margin-top: 1rem;
  color: $body-text-color;
  border-color: $border-color;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;

  @include large {
    padding: 0.75rem 1rem;
  }

  @include medium {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }

  @include small {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;
  }
}

// for item formatting
.page-title {
}

.page-author {
}

.author-info {
  color: grey;
}

.bio {
  font-size: .9rem;
  font-style: italic;
}

.hang {
  padding-left: 1.5rem;
  text-indent: -1.5rem;
}

.description {
  font-size: .8em;
  font-style: italic;
  padding-left: 36px;
}

.collection-indent {
  list-style: none;
}

.collection-indent>li {
  border-top: 1px solid $border-color;
  margin-top: 24px;
  margin-bottom: 24px;
  text-indent: 0px;
}

